--- a/24找房租房.md
+++ b/24找房租房.md
@@ -31,11 +31,11 @@
 | --------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------- |
 | [Housing Office](https://wohnen.ethz.ch/index.php?act=searchoffer)                                                                | ETH\&UZH联办租房平台，具体步骤请见[云找房](<16 云找房.md>)篇&#xA;&#xA;此外，该平台也有很多本地居民和中介发布的租房信息                                                                                                                                         | 官方房源：&#xA;1\. 回复速度快&#xA;2\. 申请成功率较高&#xA;3\. 房租相对便宜&#xA;4\. 室友都是学生&#xA;5\. 无需收入证明&#xA;&#xA;第三方房源：&#xA;1\. 非官方房源选择丰富 | 官方房源：&#xA;1\. 竞争激烈，新房源上架后很快抢空&#xA;2\. 每人只有一次分配宿舍的机会，选择余地小&#xA;&#xA;第三方房源&#xA;1\. 可能是骗子&#xA;2\. 房东可能只会德语 |
 | [Student Village](https://studentvillage.ch/en/)&#xA;[Living Science](https://www.livingscience.ch/wohnen-studieren-zuerich/?L=0) | ETH学生宿舍&#xA;&#xA;基本上不太可能通过SV和LV的官网拿到房，而是通过[Facebook群组](https://www.facebook.com/groups/svzurich/)和微信群接手房间。建议多多关注[Facebook群组](https://www.facebook.com/groups/svzurich/)，微信群名为”SV的宝宝们“，长期500人满员，可以联系在群中的朋友在有空位时将你拉入 | 1. 室友都是学生&#xA;2\. 无需收入证明&#xA;3\. 有基本家具&#xA;4\. 在ETH Hönggerberg校区                                                  | 1. 竞争激烈&#xA;2\. 多人共享公共区域                                                                                |
-| [WOKO](https://www.woko.ch)                                                                                                       | 苏黎世学生租房网站                                                                                                                                                                                                          | 1. 价格优惠&#xA;2\. 无需收入证明&#xA;3\. 可靠&#xA;4\. 有基本家具                                                                    | 1. 竞争激烈&#xA;2\. 大多需提早起租 3. 多人共享公共区域（如厨房、浴室等）                                                            |
-| [JUWO](https://www.juwo.ch)                                                                                                       | 青年住房组织，适合年龄在16-28岁，年收入小于30000瑞，处于学习或者实习阶段的青年。                                                                                                                                                                      | 1. 价格优惠&#xA;2\. 无需收入证明&#xA;3\. 可靠&#xA;4\. 适合28岁以下的同学                                                               | 1. 竞争激烈&#xA;2\. 等待时间长&#xA;3\. 没有家具                                                                      |
-| [WFSS](https://www.wfss.ch/de/)                                                                                                   | 主要为学生提供在校外和校内的住房选择，适合students, PHD's, Trainee, Guest lectures。                                                                                                                                                     | 1. 价格优惠&#xA;2\. 无需收入证明&#xA;3\. 可靠                                                                                  | 1. 竞争激烈&#xA;2\. 多人共享公共区域                                                                                |
-| [ST-JUSTIN](https://justinus.ch/en/?cn-reloaded=1)                                                                                | 由Christian Catholic Oeuvre St-Justin经营的国际学生宿舍，有65间面积大小不同的学生房间。                                                                                                                                                     | 1. 价格优惠&#xA;2\. 无需收入证明&#xA;3\. 国籍多样化&#xA;4\. 距离ETH和UZH主校仅2公里                                                       | 1. 竞争激烈&#xA;2\. 秋季需4.15就申请&#xA;3\. 多人共享公共区域（如厨房、浴室等）                                                    |
-| 学联合作伙伴&#xA;INTERMEZZO&#xA;&#xA;请见下文介绍                                                                                             | 是一家由瑞士本地致力于利用苏黎世地区空置物业和公寓提供中短租的小型租房公司。                                                                                                                                                                             | 1. 价格相对优惠&#xA;2\. 沟通更加方便&#xA;3\. 有基本家具                                                                             | 1. 竞争激烈（由其是8/9月）&#xA;                                                                                   |
+| [WOKO](https://www.woko.ch)                                                                                                       | 苏黎世学生租房网站                                                                                                                                                                                                          | 1. 价格优惠&#xA;2\. 无需收入证明&#xA;3\. 可靠&#xA;4\. 有基本家具                                                                    | 1. 竞争激烈&#xA;2\. 大多需提早起租&#xA;3\. 多人共享公共区域（如厨房、浴室等）                                                       |
+| [JUWO](https://www.juwo.ch)                                                                                                       | 青年住房组织，适合年龄在16-28岁，年收入小于30000瑞，处于学习或者实习阶段的青年                                                                                                                                                                       | 1. 价格优惠&#xA;2\. 无需收入证明&#xA;3\. 可靠&#xA;4\. 适合28岁以下的同学                                                               | 1. 竞争激烈&#xA;2\. 等待时间长&#xA;3\. 没有家具                                                                      |
+| [WFSS](https://www.wfss.ch/de/)                                                                                                   | 公益性质的学生租房组织，主要为学生提供在校外的廉价住房选择                                                                                                                                                                                      | 1. 价格优惠&#xA;2\. 无需收入证明&#xA;3\. 可靠                                                                                  | 1. 竞争激烈&#xA;2\. 房子多数有些老旧（但依然质量不错）                                                                       |
+| [ST-JUSTIN](https://justinus.ch/en/?cn-reloaded=1)                                                                                | 由Christian Catholic Oeuvre St-Justin经营的国际学生宿舍，有65间面积大小不同的学生房间                                                                                                                                                      | 1. 价格优惠&#xA;2\. 无需收入证明&#xA;3\. 国籍多样化&#xA;4\. 距离ETH和UZH主校仅2公里                                                       | 1. 竞争激烈&#xA;2\. 秋季需4月15日就开始申请&#xA;3\. 多人共享公共区域（如厨房、浴室等）                                                 |
+| 学联合作伙伴&#xA;INTERMEZZO&#xA;&#xA;详情见下文介绍                                                                                            | 是一家由瑞士本地致力于利用苏黎世地区空置物业和公寓提供中短租的小型租房公司                                                                                                                                                                              | 1. 价格相对优惠&#xA;2\. 沟通更加方便&#xA;3\. 有基本家具                                                                             | 1. 竞争激烈（尤其8-9月）&#xA;                                                                                    |
 | 微信群内转租&#xA;&#xA;新生群、二手群、搬家群、租房群、学联活动群等                                                                                            | 微信群上经常会有同学发布出房信息，你也可以发布求房信息                                                                                                                                                                                        | 中国人之间转租，沟通方便                                                                                                       | 1. 价格波动范围大&#xA;2\. 需甄别真实性                                                                               |
 | [学联论坛](https://forum.acssz.org/)                                                                                                  | 学联论坛上经常会有同学发布出房信息，你也可以发布求房信息                                                                                                                                                                                       | 中国人之间转租，沟通方便                                                                                                       | 1. 价格波动范围大&#xA;2\. 需甄别真实性                                                                               |
 
@@ -47,13 +47,13 @@
 房源：主要在苏黎世市区，靠近UZH、ETH、ZHAW等主校，在Oerlikon、Irchel、ETH Hönggerberg附近。
 价格：650-1200瑞士法郎每月，押二付一，灵活终止合同，先住后付，不需提前支付任何费用。房费包含水电网暖费用，提供家具，厨房设备（洗碗机、烤箱、锅碗瓢盆），洗衣房。
 **申请流程**：确定需求；填写申请表；签署合同；入住对接；押租金。
-Alex将在微信账户的**朋友圈**中发布所有可用的房间。每个房间的**申请表格链接**都在**评论**部分。如果没有看到申请表，那是因为该房间目前已被预订/租出。
+Alex将在微信账户的**朋友圈**中发布所有可租的房间。每个房间的**申请表格链接**都在**评论**部分。如果没有看到申请表，那是因为该房间目前已被预订/租出。
 
 1. 如果你对其中的一个房间感兴趣，请在微信上添加Alex，并告知你的名字（拼音），然后把想租的房间的申请表发回；
 2. 请用德语或英语与Alex联系；
 3. 一般来说，如果Alex发布了一个房间，它立即可租。租房合同必须在提交申请后两周内开始执行。请不要要求2-3个月后起租的房间，他们不会提前那么久提供房间；
 4. 只出租limited（有固定租期）的公寓。没有unlimited（无限可续）的公寓！
-5. 一般来说，公寓配有一张床、一张床垫、一把椅子、一张桌子、一盏台灯和一个壁橱，除非另有说明；
+5. 一般来说，公寓配有一张床、一张床垫、一把椅子、一张桌子、一盏台灯和一个壁橱；
 6. 租金价格包括所有的水电费、Wifi和家具费用；
 7. 如果你提交了申请表，并且Alex已经告诉你，他把申请表转给了他的同事来准备合同，那么这个申请就有约束力。如果你后来取消申请，Intermezzo将不接受你的进一步申请，或者向你收取50瑞士法郎的行政工作费用。
 
@@ -80,8 +80,6 @@ Alex将在微信账户的**朋友圈**中发布所有可用的房间。每个房
 >
 > [Room Estate ](https://roomestate.com/)（房源大多可以查看在住人信息，并且可以在线预定租赁，但是真实体验未知）
 
-^
-
 学联只提供信息整理，对以上所有租房平台仅做推荐，不参与任何租房交易过程，不承担任何风险责任。
 
 预祝大家都能找到合适的房子！
@@ -90,12 +88,12 @@ Alex将在微信账户的**朋友圈**中发布所有可用的房间。每个房
 
 ### **4**. **租房注意事项**
 
-1. 所租房子是否能签署租房合同（有合同才能去人口登记办公室报到）
-2. 确认房费是否包含水电网暖气电视等费用，是否含有家具，**是否需要承接家具**（请务必提前约定清楚）。如果不包含家具，建议首先尝试收二手（微信群、本地二手平台、Facebook等），或在家附近捡一些居民不用的家具（带有**gratis**字样纸条），实在缺少再去[IKEA](https://www.ikea.com/ch/en/)添置。这边多数房间都是不带家具的，不要被没有家具劝退，自己置办家具也是不错的选择
-3. 瑞士正规租房流程没有定金的说法，并不要交定金，要求提前交钱的都不要信，类似这种可疑情况都不要转账
+1. 所租房子是否能签署租房合同（有合同才能去人口登记办公室申报住址）
+2. 确认房费是否包含水电网暖气电视等费用，是否含有家具，**是否需要承接家具**（请务必提前约定清楚）。如果不包含家具，建议首先尝试收二手家具（微信群、本地二手平台、Facebook等），或在家附近捡一些居民不用的家具（带有**gratis**字样纸条），实在缺少再去[IKEA](https://www.ikea.com/ch/en/)添置。这边多数房间都是不带家具的，不要因为没有家具被劝退，自己置办家具也是不错的选择
+3. 瑞士正规租房流程没有定金的说法，并不要求交定金，要求提前交钱的都不要信，类似这种可疑情况都不要转账
 4. 瑞士正规租房流程是押金账户【会有一个专门开设在你名下的银行账户（房东/中介会帮你开户，需要你授权签字）来存放你交的押金，而不是放在房东或房产公司的账户里】+租金对公转账【通过Einzahlungsschein（汇款单）或LSV（定期扣款授权协议）直接将租金转给房东（房产公司或私人产权所有者）账户】。如果因转租确要汇款到二房东私人账户，必须在转租合同内写明
 5. 尽量选择线下见面签合同，签完合同同时应该完成钥匙的交接（房东应该给你钥匙）。线上签合同需谨慎
-6. 签合同后，房东应该和你一同确认房间现有破损，并记录在检查单上，由双方签字确认。如果入住后你发现了检查单上未记录的破损，且确实之前就已经存在（并非由你造成），请尽快告知房东（一般一个月内有效），以免退租时出现不必要的纠纷。如有需要可购买房屋保险（household insurance）
+6. 签合同后，房东应该和你一同确认房间现有破损状况，记录在检查单上，并由双方签字确认。如果入住后你发现了检查单上未记录的破损，且确实之前就已经存在（并非由你造成），请尽快告知房东（一般一个月内有效），以免退租时出现不必要的纠纷。如有需要可购买房屋保险（household insurance）
 7. 和它人合租时，应避免“多人将租金/押金转到一位房客的私人账户后，再由该房客统一汇款”的转账方式，而应该由各位房客分别且独立地对公转账（转给房东或中介），以避免房客间不必要的资金往来纠纷
 8. 尽量选择能够长租的房子，搬家真的很麻烦。若是短租，需谨慎
 9. WOKO注意事项：若博士在28岁前入住，之后可以继续续住。博士年收入超过26400CHF，每月要多交100CHF
@@ -106,7 +104,7 @@ Alex将在微信账户的**朋友圈**中发布所有可用的房间。每个房
 
 ### **5. “注册”地址相关**
 
-总的来说，“注册地址”一词是很久以前由坊间发明创造出来的词汇，其**不对应任何官方条文概念**。官方要求请见“[25 住址的申报与注销](25住址的申报与注销.md)”篇。
+总的来说，“注册地址”一词是很久以前坊间以讹传讹冒出来的词汇，其**不对应任何官方条文概念**。官方要求请见“[25 住址的申报与注销](25住址的申报与注销.md)”篇。
 
 ^
 
@@ -122,7 +120,7 @@ Alex将在微信账户的**朋友圈**中发布所有可用的房间。每个房
 
 ^
 
-此外，根据苏黎世州官方政策：
+此外，根据苏黎世州官方政策（第三方申报义务）：
 
 如果A决定转租房间给B，那么**应在转租开始的14天内向人口登记办公室说明并帮B完成地址申报**。因此，转租申报不是二房东愿不愿意、可不可以的问题，而**是二房东应该履行的义务**。
 
@@ -138,7 +136,7 @@ Alex将在微信账户的**朋友圈**中发布所有可用的房间。每个房
 
 ^
 
-不能申报地址的租房，就是不开合同的租房，一般是期限很短的租房，如一个星期。**如果租房时长在一个月及以上**，**无论直租还是转租，按惯例是需要签订租房合同的（直租或转租合同），有合同就可以去人口登记办公室进行申报**。
+不能申报地址的租房，就是不开合同的租房，一般是期限很短的租房，如一个星期。**如果租房时长在一个月及以上**，**无论直租还是转租，按惯例是需要签订租房合同的（直租或转租合同），有合同就可以去人口登记办公室进行住址申报**。
 
 > 转租合同模板（由[瑞士租房者协会](https://www.mieterverband.ch/)提供）:attachment[2019\_Untermietvertrag-Wohnraeume\_mp\_interaktiv.pdf]{src=".topwrite/assets/2019_Untermietvertrag-Wohnraeume_mp_interaktiv.pdf" size="154.85 kB"}
 
@@ -162,7 +160,7 @@ Alex将在微信账户的**朋友圈**中发布所有可用的房间。每个房
 
 #### **如何确定我想租的房子是否在110区/苏黎世市区**？
 
-最直接的办法是查看该房子**对应邮编号码后的地名**，只要该地名是**Zürich**（不管是8001 **Zürich**还是8092 **Zürich**），那就是苏黎世市，也就代表着该房子位于110区/苏黎世市区。
+最直接的办法是查看该房子**对应邮编号码后的地名**，只要该地名是**Zürich**（无论是8001 **Zürich**还是8092 **Zürich**），那就是苏黎世市，也就代表着该房子位于110区/苏黎世市区。
 
 反之，如果后面的地名不是Zürich而是其它的——如Dübendorf，Winterthur等，就说明该房子不在110区/苏黎世市区。
 
