--- a/25住址的申报与注销.md
+++ b/25住址的申报与注销.md
@@ -5,7 +5,7 @@
 #### **1. 苏黎世州的住址申报体系介绍**
 
 *本章节内容自2023年6月12日起适用*。
-本章节涉及诸多专有翻译，为便于使用搜索引擎检索及与工作人员交流，将非地名的翻译列表如下：
+本章节涉及诸多专有翻译，为便于使用搜索引擎检索及与工作人员交流，非地名的翻译列表如下：
 
 | 本文使用的中文译名             | 对应的德语单词                                                      | 对应的英语单词（如有）                                                                        |
 | --------------------- | ------------------------------------------------------------ | ---------------------------------------------------------------------------------- |
@@ -17,8 +17,8 @@
 | 住址申报                  | anmelden                                                     | register                                                                           |
 | 住址变更                  | Addresseänderung                                             | Change of residential address                                                      |
 | 住址注销                  | abmelden                                                     | de-register                                                                        |
-| 申报确认函                 | Meldebestätigung                                             | Confirmation of registration                                                       |
-| 居留证/居留卡               | Aufenthaltstitel&#xA;   Aufenthaltsbewilligung               | Residence permit                                                                   |
+| **申报确认函**             | **Meldebestätigung**                                         | **Confirmation of registration**                                                   |
+| **居留证/居留卡**           | **Aufenthaltstitel&#xA;Aufenthaltsbewilligung**              | **Residence permit**                                                               |
 
 ^
 
