--- a/24找房租房.md
+++ b/24找房租房.md
@@ -108,9 +108,9 @@ Alex将在微信账户的**朋友圈**中发布所有可租的房间。每个房
 
 ^
 
-#### **同一个地址可否申报多人**？（“短期转租注册”问题）
+#### **持转租合同是否可以申报住址**？（同一个地址可否申报多人？）
 
-可以。
+可以且必须。
 
 根据政府官方工作人员的回答：
 
@@ -120,7 +120,7 @@ Alex将在微信账户的**朋友圈**中发布所有可租的房间。每个房
 
 ^
 
-此外，根据苏黎世州官方政策（第三方申报义务）：
+此外，根据苏黎世市官方政策（第三方申报义务）：
 
 如果A决定转租房间给B，那么**应在转租开始的14天内向人口登记办公室说明并帮B完成地址申报**。因此，转租申报不是二房东愿不愿意、可不可以的问题，而**是二房东应该履行的义务**。
 
