--- a/25住址的申报与注销.md
+++ b/25住址的申报与注销.md
@@ -18,7 +18,7 @@
 | 住址变更                  | Addresseänderung                                             | Change of residential address                                                      |
 | 住址注销                  | abmelden                                                     | de-register                                                                        |
 | **申报确认函**             | **Meldebestätigung**                                         | **Confirmation of registration**                                                   |
-| **居留证/居留卡**           | **Aufenthaltstitel&#xA;Aufenthaltsbewilligung**              | **Residence permit**                                                               |
+| **居留证/居留卡**           | **Aufenthaltstitel**&#xA;**Aufenthaltsbewilligung**          | **Residence permit**                                                               |
 
 ^
 
