--- a/10申请签证.md
+++ b/10申请签证.md
@@ -1,6 +1,6 @@
 #### **1. 申请签证的时间**
 
-在收到录取通知书后，就可以开始准备申请签证的材料。ETH官网推荐**最晚在计划入境前3个月**递交申请，整个审核过程理论需 8-12 周，根据经验，实际审核时长为1个月左右。
+Bachelor与Master学生在收到录取通知书后，就可以开始准备申请签证的材料。ETH官网推荐**最晚在计划入境前3个月**递交申请，整个审核过程理论需 8-12 周，根据经验，实际审核时长为1个月左右。（PhD学生办的是工作签，其必须由学校代为申请，实际操作上一般由组里的秘书代为申请）
 
 ^
 
