--- a/25住址的申报与注销.md
+++ b/25住址的申报与注销.md
@@ -47,7 +47,7 @@
 
 ***
 
-**瑞士有着严格的住址申报制度，所有居民均有义务向政府申报自己的住址，其中新迁入的人员必须在抵达后14天内进行申报**。相关法律法规见：[Gesetz über das Meldewesen und die Einwohnerregister (MERG)](http://www2.zhlex.zh.ch/appl/zhlex_r.nsf/0/37FA9D3FAA0D5447C1257F1D004A8834/$file/142.1_11.5.15_91.pdf)（14天内未找到可供申报的住所的，也必须前往南城人口登记处说明情况请求延期，避免成为“黑户”）
+**瑞士有着严格的住址申报制度，所有居民均有义务向政府申报自己的住址，其中新迁入的人员必须在抵达后14天内进行申报**。相关法律法规见：[Gesetz über das Meldewesen und die Einwohnerregister (MERG)](http://www2.zhlex.zh.ch/appl/zhlex_r.nsf/0/37FA9D3FAA0D5447C1257F1D004A8834/$file/142.1_11.5.15_91.pdf)（若预计在14天内没有找到住处，**必须于入境起14天内前往临时住址对应的人口登记办公室**，**向工作人员说明自己的情况**，让工作人员进行临时记录，以免成为“黑户”；）
 
 **具体如下**：
 **1. 对于从瑞士以外的国家迁入苏黎世州的人员（即首次在苏黎世州办理申报的，所有从国内首次前来苏黎世留学的同学均属此类**）：
