--- a/24找房租房.md
+++ b/24找房租房.md
@@ -122,7 +122,7 @@ Alex将在微信账户的**朋友圈**中发布所有可租的房间。每个房
 
 此外，根据苏黎世市官方政策（第三方申报义务）：
 
-如果A决定转租房间给B，那么**应在转租开始的14天内向人口登记办公室说明并帮B完成地址申报**。因此，转租申报不是二房东愿不愿意、可不可以的问题，而**是二房东应该履行的义务**。
+如果A决定转租房间给B，那么**A应在转租开始的14天内完成第三方申报，这是A必须履行的义务向人口登记办公室说明并帮B完成地址申报**。因此，转租申报不是二房东愿不愿意、可不可以的问题，而**是二房东应该履行的义务**。
 
 > <https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/umziehenmelden/temporaerelandesabwesenheit.html>
 >
