--- a/24找房租房.md
+++ b/24找房租房.md
@@ -116,13 +116,13 @@ Alex将在微信账户的**朋友圈**中发布所有可租的房间。每个房
 
 > 人口登记办公室并无房屋相关信息，仅负责地址登记；房屋最大居住人数由房屋所有者按需定夺。原则上，即使是短租也必须申报。因此，凡原房东同意转租的，不会有申报冲突的问题。
 
-可理解为**凡持有短期转租合同的都必须在人口登记办公室申报住址，无论提供转租者是否同样在此地址申报**。
+可理解为**凡持有短期转租合同的租客都必须在人口登记办公室申报住址，无论提供转租者是否同样在此地址申报**。
 
 ^
 
-此外，根据苏黎世市官方政策（第三方申报义务）：
+此外，根据苏黎世市官方政策：
 
-如果A决定转租房间给B，那么**A应在转租开始的14天内完成第三方申报，这是A必须履行的义务向人口登记办公室说明并帮B完成地址申报**。因此，转租申报不是二房东愿不愿意、可不可以的问题，而**是二房东应该履行的义务**。
+如果A决定转租房间给B，那么**A应在转租开始的14天内完成**[第三方申报](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/umziehenmelden/drittmeldepflicht.html)，**这是A必须履行的义务。与此同时，B应该前往人口登记办公室进行住址申报**。请注意，这是两件并行但独立的事情，需要A和B分别完成各自的义务。
 
 > <https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/umziehenmelden/temporaerelandesabwesenheit.html>
 >
@@ -130,7 +130,7 @@ Alex将在微信账户的**朋友圈**中发布所有可租的房间。每个房
 
 ^
 
-#### **具体流程上如何为转租租客进行地址申报**？
+#### **具体流程上，转租租客如何申报住址**？
 
 只要能签租房合同，无论是Mietvertrag或Untermietvertrag（原始合同或转租合同），都可以申报地址。请注意如果是转租，需要把转租合同和二房东手里的原始合同一起带去人口登记办公室，且最好二房东一起陪同前往申报。
 
