--- a/24找房租房.md
+++ b/24找房租房.md
@@ -132,11 +132,11 @@ Alex将在微信账户的**朋友圈**中发布所有可租的房间。每个房
 
 #### **具体流程上，转租租客如何申报住址**？
 
-只要能签租房合同，无论是Mietvertrag或Untermietvertrag（原始合同或转租合同），都可以申报地址。请注意如果是转租，需要把转租合同和二房东手里的原始合同一起带去人口登记办公室，且最好二房东一起陪同前往申报。
+只要能签租房合同，无论是Mietvertrag或Untermietvertrag（原始合同或转租合同），都可以申报地址。不能申报地址的租房，就是不开合同的租房，一般是期限很短的租房，如一个星期。
 
-^
+****
 
-不能申报地址的租房，就是不开合同的租房，一般是期限很短的租房，如一个星期。**如果租房时长在一个月及以上**，**无论直租还是转租，按惯例是需要签订租房合同的（直租或转租合同），有合同就可以去人口登记办公室进行住址申报**。
+**如果租房时长在一个月及以上**，**无论直租还是转租，按惯例是需要签订租房合同的（直租或转租合同），有合同就可以去人口登记办公室进行住址申报**。请注意如果是转租，需要把转租合同和二房东手里的原始合同一起带去人口登记办公室，且最好二房东一起陪同前往申报。
 
 > 转租合同模板（由[瑞士租房者协会](https://www.mieterverband.ch/)提供）:attachment[2019\_Untermietvertrag-Wohnraeume\_mp\_interaktiv.pdf]{src=".topwrite/assets/2019_Untermietvertrag-Wohnraeume_mp_interaktiv.pdf" size="154.85 kB"}
 
