--- a/24找房租房.md
+++ b/24找房租房.md
@@ -114,9 +114,9 @@ Alex将在微信账户的**朋友圈**中发布所有可租的房间。每个房
 
 根据政府官方工作人员的回答：
 
-> 人口登记办公室并无房屋相关信息，仅负责地址登记；房屋最大居住人数由房屋所有者按需定夺。原则上，即使是短租也必须申报。因此，凡原房东同意转租的，不会有申报冲突的问题。
+> 人口登记办公室并无房屋相关信息，仅负责地址登记；房屋最大居住人数由房屋所有者按需定夺。原则上，即使是短租也必须申报。因此，只要原房东同意二房东转租，二房东和转租租客不会有申报冲突的问题。
 
-可理解为**凡持有短期转租合同的租客都必须在人口登记办公室申报住址，无论提供转租者是否同样在此地址申报**。
+凡持有短期转租合同的租客都必须在人口登记办公室申报住址，无论提供转租者是否同样在此地址申报。
 
 ^
 
@@ -134,9 +134,9 @@ Alex将在微信账户的**朋友圈**中发布所有可租的房间。每个房
 
 只要能签租房合同，无论是Mietvertrag或Untermietvertrag（原始合同或转租合同），都可以申报地址。不能申报地址的租房，就是不开合同的租房，一般是期限很短的租房，如一个星期。
 
-****
+^
 
-**如果租房时长在一个月及以上**，**无论直租还是转租，按惯例是需要签订租房合同的（直租或转租合同），有合同就可以去人口登记办公室进行住址申报**。请注意如果是转租，需要把转租合同和二房东手里的原始合同一起带去人口登记办公室，且最好二房东一起陪同前往申报。
+如果租房时长在一个月及以上，无论直租还是转租，按惯例是需要签订租房合同的（直租或转租合同），有合同就可以去人口登记办公室进行住址申报。请注意如果是转租，需要把转租合同和二房东手里的原始合同一起带去人口登记办公室，且最好二房东一起陪同前往申报。
 
 > 转租合同模板（由[瑞士租房者协会](https://www.mieterverband.ch/)提供）:attachment[2019\_Untermietvertrag-Wohnraeume\_mp\_interaktiv.pdf]{src=".topwrite/assets/2019_Untermietvertrag-Wohnraeume_mp_interaktiv.pdf" size="154.85 kB"}
 
