--- a/24找房租房.md
+++ b/24找房租房.md
@@ -114,9 +114,7 @@ Alex将在微信账户的**朋友圈**中发布所有可租的房间。每个房
 
 根据政府官方工作人员的回答：
 
-> 人口登记办公室并无房屋相关信息，仅负责地址登记；房屋最大居住人数由房屋所有者按需定夺。原则上，即使是短租也必须申报。因此，只要原房东同意二房东转租，二房东和转租租客不会有申报冲突的问题。
-
-凡持有短期转租合同的租客都必须在人口登记办公室申报住址，无论提供转租者是否同样在此地址申报。
+> 人口登记办公室并无房屋相关信息，仅负责地址登记，房屋最大居住人数由房屋所有者按需定夺。原则上，即使是短租也必须申报。因此，只要原房东同意二房东转租，二房东和转租租客可以在同一地址申报。
 
 ^
 
