--- a/24找房租房.md
+++ b/24找房租房.md
@@ -142,13 +142,13 @@ Alex将在微信账户的**朋友圈**中发布所有可租的房间。每个房
 
 #### **什么是收“注册”地址/出“注册”地址**？
 
-所谓收“注册”地址/出“注册”地址，其实就是开假的租房合同给你，实际上你并不住那里，只是让你可以先去申报住址。学联非常不推荐买卖“注册”地址（假合同），这是非法的，一旦被发现，将会导致一系列连锁的问题和麻烦。且移民局和人口登记办公室的文件都会寄到这个假地址，这样的话，你很有可能永远也拿不到这些文件了
+所谓收“注册”地址/出“注册”地址，其实就是开假的租房合同给你，实际上你并不住那里，只是让你可以先去申报住址。学联非常不推荐买卖“注册”地址（假合同），这是非法的，一旦被发现，将会导致一系列连锁的问题和麻烦。且移民局和人口登记办公室的文件都会寄到这个假地址，这样的话，你很有可能永远也拿不到这些文件了。
 
 ^
 
 ### **6. 110区相关**
 
-#### **什么是110区**？
+#### **什么是110区**
 
 110区是ZVV苏黎世州交通协会划定的一个**公共交通分区**，其对应**苏黎世市市属公共交通系统**（Stadtnetz Zürich），因此可以与苏黎世市区相对照——**如果你租的房子在110区，则意味着你住在苏黎世市区**。
 
@@ -156,7 +156,7 @@ Alex将在微信账户的**朋友圈**中发布所有可租的房间。每个房
 
 ^
 
-#### **如何确定我想租的房子是否在110区/苏黎世市区**？
+#### **如何确定我想租的房子是否在110区/苏黎世市区**
 
 最直接的办法是查看该房子**对应邮编号码后的地名**，只要该地名是**Zürich**（无论是8001 **Zürich**还是8092 **Zürich**），那就是苏黎世市，也就代表着该房子位于110区/苏黎世市区。
 
@@ -166,6 +166,6 @@ Alex将在微信账户的**朋友圈**中发布所有可租的房间。每个房
 
 ^
 
-#### **一定要租110区/苏黎世市区的房子吗**？
+#### **一定要租110区/苏黎世市区的房子吗**
 
 不一定。如上文所说，110区指苏黎世市区，其覆盖范围很大（交通月票/年票收费上算作2个区），即便房子在110区，其离你的主要上课校区可能依然很远（如单程通勤半小时）。重要的是考虑自己平时的主要上课校区、通勤时间、交通费、房租等因素并综合权衡，且同时考虑该房子是初来瑞士短租过渡还是未来2-3年的稳定长租。
