--- a/32医疗相关.md
+++ b/32医疗相关.md
@@ -58,13 +58,13 @@ Permanence Marktplatz Oerlikon
 
 ^
 
-#### **1.3 线上就医**
+#### **1.3 线上预约/就诊**
 
 Swisscare客户可在Swisscare App上可以查看到本地各家医院和诊所以及医生的信息并预约。
 
 Groupe Mutuel客户可使用Medgate APP，填写相关信息线上就诊，也可以拨打电话就诊[0900 11 44 11](<tel:0900 11 44 11>)。
 
-急诊前先准备好个人信息、健康保险证件、个人身份证明和就诊需求。
+就诊前先准备好个人信息、健康保险证件、个人身份证明和就诊需求。
 
 > 注：这边就医具体报销情况，需要根据自己所购买的保险决定。
 
