--- a/25住址的申报与注销.md
+++ b/25住址的申报与注销.md
@@ -149,10 +149,9 @@
 
 #### **6. 第三方申报义务（Drittmeldepflicht**）
 
-（本章节后期将复制/移动至[03 生活相关](03生活相关.md)或其他对应部分）
-根据苏黎世法律法规，出租人（房东/中介/二房东）在房屋出租情况有变更时（即：原承租人搬出或有新的承租人搬入时等）需向报告房屋出租情况变动。在实际操作中，这往往与**新承租人（包括转租租客）的地址申报**合并进行。苏黎世市的有关政策可参见：[Stadt Zürich Drittmeldepflicht](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/umziehenmelden/drittmeldepflicht.html)
+根据苏黎世市法规，出租人（房东/中介/二房东）在房屋出租情况有变更时（即：原承租人搬出或有新的承租人搬入时等）需向社区所在的人口登记办公室报告房屋出租变动情况（[可在线完成](https://www.drittmeldung.ch/ui/#/home)）。与此同时，新承租人（包括转租租客）需要向社区所在的人口登记办公室。苏黎世市的有关政策可参见：[Stadt Zürich Drittmeldepflicht](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/umziehenmelden/drittmeldepflicht.html)
 
-^
+####
 
 #### **7**. **住址注销**
 
