--- a/25住址的申报与注销.md
+++ b/25住址的申报与注销.md
@@ -151,7 +151,7 @@
 
 根据苏黎世市法规，出租人（房东/中介/**二房东**）在房屋出租情况有变更时（即：原承租人搬出或有新的承租人搬入时等）需向社区所在的人口登记办公室报告房屋出租变动情况（[可在线完成](https://www.drittmeldung.ch/ui/#/home)）。
 
-与此同时，新承租人（包括**转租租客**）需要向社区所在的人口登记办公室进行住址申报（第一次申报住址需要线下办理，之后可使用[E-Umzug平台](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/onlineschalter/eumzug.html)）。
+与此同时，新承租人（包括**转租租客**）需要向社区所在的人口登记办公室申报住址（第一次申报住址需要线下办理，之后可使用[E-Umzug平台](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/onlineschalter/eumzug.html)）。
 
 > 苏黎世市的有关政策可参见：[Stadt Zürich Drittmeldepflicht](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/umziehenmelden/drittmeldepflicht.html)
 
