--- a/24找房租房.md
+++ b/24找房租房.md
@@ -132,7 +132,7 @@ Alex将在微信账户的**朋友圈**中发布所有可租的房间。每个房
 
 根据苏黎世市官方政策：
 
-如果A决定转租房间给B，那么**A应在转租开始的14天内完成**[第三方申报](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/umziehenmelden/drittmeldepflicht.html)（可[在线完成](https://www.drittmeldung.ch/ui/#/home)），**这是A必须履行的义务；与此同时**，**如果B是首次申报，则B应该前往人口登记办公室申报住址**，如果是搬家则可用[Eumzug](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/onlineschalter/eumzug.html)。请注意，这是两件**并行但独立**的事情，需要A和B分别完成各自的义务。
+如果A决定转租房间给B，那么**A应在转租开始的14天内完成**[第三方申报](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/umziehenmelden/drittmeldepflicht.html)（可[在线完成](https://www.drittmeldung.ch/ui/#/home)），**这是A必须履行的义务；与此同时，在这14天内**，**B应该前往人口登记办公室申报住址**。请注意，这是两件**并行但独立**的事情，需要A和B分别完成各自的义务。
 
 > <https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/umziehenmelden/temporaerelandesabwesenheit.html>
 >
