--- a/24找房租房.md
+++ b/24找房租房.md
@@ -126,13 +126,13 @@ Alex将在微信账户的**朋友圈**中发布所有可租的房间。每个房
 
 根据政府官方工作人员的回答：
 
-> 人口登记办公室并无房屋相关信息，仅负责地址登记，房屋最大居住人数由房屋所有者按需定夺。原则上，即使是短租也必须申报。因此，只要原房东同意二房东转租，二房东和转租租客可以在同一地址申报。
+> 人口登记办公室并无房屋相关信息，仅负责地址登记。原则上，即使是短租也必须申报。因此，只要原房东同意二房东转租，二房东和转租租客可以在同一地址申报。
 
 ^
 
 根据苏黎世市官方政策：
 
-如果A决定转租房间给B，那么**A应在转租开始的14天内完成**[第三方申报](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/umziehenmelden/drittmeldepflicht.html)（可[在线完成](https://www.drittmeldung.ch/ui/#/home)），**这是A必须履行的义务；与此同时，在这14天内**，**B应该前往人口登记办公室申报住址**。请注意，这是两件**并行但独立**的事情，需要A和B分别完成各自的义务。
+如果A（二房东）决定**转租**房间给B（转租租客），那么**A应在转租开始的14天内完成**[第三方申报](https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/umziehenmelden/drittmeldepflicht.html)（可[在线完成](https://www.drittmeldung.ch/ui/#/home)），**这是A必须履行的义务；与此同时，在这14天内**，**B应该前往人口登记办公室申报住址**。请注意，这是两件**并行但独立**的事情，需要A和B分别完成各自的义务。
 
 > <https://www.stadt-zuerich.ch/prd/de/index/bevoelkerungsamt/umziehenmelden/temporaerelandesabwesenheit.html>
 >
