--- a/11行李准备.md
+++ b/11行李准备.md
@@ -40,7 +40,7 @@
 
 （不是日常生活必须，但偶尔能用上，瑞士有购买渠道）
 **旅行装洗漱用品**：到达瑞士的最初几天应急用。
-**小电饭煲**：没了它煮米饭得累死，不过电饭煲在各种亚超和二手群里面一般很容易找到，实在不行去本地的小米专卖店买一个也行（千万别买本地的牌子，其匮乏且不可靠的功能堪称智障）
+**小电饭煲**：没了它煮米饭得累死，不过小电饭煲在各种亚超和二手群里面一般很容易找到，实在不行去本地的小米专卖店买一个也行（千万别买本地的牌子，其匮乏且不可靠的功能堪称智障）
 **床上用品**：IKEA价格相对合理，种类偏少，质量略粗糙。
 **文具**：习惯用中性笔可多带笔芯。瑞士其他文具的性价比不错，小东西国内带也无妨，比如订书机、胶带等。
 **电池**：有需要电池的电子产品推荐充电电池，石英手表用户可以配备同型号纽扣电池。
@@ -58,18 +58,18 @@
 （瑞士购买和国内购买差距不大或不便携带，根据个人需求决定要不要带）
 
 **电脑**：有换代计划的话推荐学期初针对高校学生的Neptun项目，提供相对低价的高配置产品。下单到配送需要一段时间，建议国内带一个备用。注意高端电子产品价格一般国内更为便宜，但存在无法在瑞士保修的可能
-**正装**：可以考虑直接去隔壁意大利定制，使用场合不多，但做Pre或者参加商业活动时总有机会用到。苏黎世的HM也可以买到物美价廉的正装，或者选择HM网购也可以。
-**晚礼服**：同样可以在隔壁意大利搞定，可用来出席各种晚宴、舞会等，比如每年11月， 会在ETHZ举办欧洲最大学生舞会polyball。
-**旗袍**：可用于文化节或正式的特殊的场合。
+**正装**：可以考虑去隔壁意大利定制，使用场合不多，但做Pre或者参加商业活动时总有机会用到。苏黎世的HM等服装店也可以买到物美价廉的正装，或选择网购也可以
+**晚礼服**：同样可以在隔壁意大利搞定，可用来出席各种晚宴、舞会等，比如每年11月，会在ETHZ举办欧洲最大学生舞会polyball
+**旗袍**：可用于文化节或正式的特殊的场合
 
 ^
 
-#### **5. 千万别带**
+#### **5. 最好不带**
 
 （本地可以买到一模一样的，或者有入境限制）
 
 **各种煎锅、炒锅以及电水壶**：太重了，除了浪费你宝贵的行李额度之外没有任何用处，因为这些东西本地购买也不算太贵，再说德国的锅质量也好
-**大电饭煲**：同上，太占位置了，有需要的话建议去二手群或本地小米购买
+**大电饭煲**：同上，太占位置了，有需要的话建议去二手群或本地小米购买，或和室友协商共用（如实在想带，可自行权衡“所花费行李额”和“国内vs瑞士电饭煲差价”，并预估自己日常实际使用频率）
 **肉类**：牛肉干什么的无所谓，腊肠之类的就别带了，带多了可能会导致被海关请进小黑屋喝茶
 **中草药**：同上，可能会被当成违禁品
 **瑞士军刀**：拜托搞搞清楚你来的是瑞士诶
