--- a/11行李准备.md
+++ b/11行李准备.md
@@ -73,7 +73,7 @@
 （本地可以买到一模一样的，或者有入境限制）
 
 **各种煎锅、炒锅以及电水壶**：太重了，除了浪费你宝贵的行李额度之外没有任何用处，因为这些东西本地购买也不算太贵，再说德国的锅质量也好
-**大电饭煲**：同上，太占位置了，有需要的话建议去二手群或本地小米购买，或和室友协商共用。如实在想带，可自行权衡“所花费行李额”和“国内vs瑞士电饭煲差价”，并预估自己日常实际使用频率
+**大电饭煲**：同上，太占位置了，有需要的话建议去二手群或本地小米购买，或和室友协商共用。如实在想带，可自行权衡“所花费行李额”和“国内vs瑞士电饭煲差价”，并预估未来自己日常实际使用频率
 **肉类**：牛肉干什么的无所谓，腊肠之类的就别带了，带多了可能会导致被海关请进小黑屋喝茶
 **中草药**：同上，可能会被当成违禁品
 **瑞士军刀**：拜托搞搞清楚你来的是瑞士诶
