--- a/13赴瑞机票.md
+++ b/13赴瑞机票.md
@@ -1,3 +1,9 @@
+> [success] 本篇贡献：赵逸飞
+
+> [success] 如想寻找航班同行伙伴，请查看[学联论坛2023航班“找伴儿”贴](https://forum.acssz.org/d/1005)
+
+***
+
 ### **1. 关于安排赴瑞行程、购买赴瑞机票的一些tips/注意事项**
 
 #### **1.1 购买机票，需尽早、需果断**
@@ -105,7 +111,7 @@
 目前，中国内地→瑞士直航航班包含：
 
 * LX189航班（上海浦东PVG-苏黎世ZRH），[瑞士国际航空](https://www.swiss.com/cn/zh/homepage)承运，每周三、五、日执行，起降时刻11:20-18:50，实际飞行时长约13小时，执飞机型为B77W/A343
-* CA861航班（北京首都PEK-日内瓦GVA），[中国国际航空](https://www.airchina.com.cn/)承运，每周一、四、六 **（7月14日起调整为每周一、四、五、六）** 执行，起降时刻02:25-07:15，实际飞行时长约11小时，执飞机型为A332
+* CA861航班（北京首都PEK-日内瓦GVA），[中国国际航空](https://www.airchina.com.cn/)承运，每周一、四、六 （**7月14日起调整为每周一、四、五、六**） 执行，起降时刻02:25-07:15，实际飞行时长约11小时，执飞机型为A332
 
 目前，中国内地→瑞士的航线航班没有增加的计划。如有增班的信息，我们会第一时间通告。
 
