--- a/13赴瑞机票.md
+++ b/13赴瑞机票.md
@@ -1,6 +1,6 @@
 > [success] 本篇贡献：赵逸飞
 
-> [success] 如想寻找航班同行伙伴，请查看[学联论坛2023航班“找伴儿”贴](https://forum.acssz.org/d/1005)
+> [success] 如想寻找同一航班伙伴，请查看[学联论坛2023航班“找伴儿”贴](https://forum.acssz.org/d/1005)
 
 ***
 
