--- a/24找房租房.md
+++ b/24找房租房.md
@@ -2,8 +2,8 @@
 
 ### **1. 临时过渡住所**
 
-* 酒店：酒店价格会比较高，适合极短期（一周内）
-* 民宿：性价比会更高，而且可以做饭。可以找适合多人住的民宿，然后在群里找同学一起拼，价格会比较优惠
+* 酒店：酒店比较昂贵，一般只适用于极短期（一周内）
+* 民宿：价格相对合理，而且可以做饭。可以找适合多人住的民宿，然后在群里找同学一起拼
 
 > 有些民宿或青年酒店居住时长超过1个月会签租房合同（提前与店家确认），可以拿这个合同去人口登记办公室申报住址
 
