--- a/24找房租房.md
+++ b/24找房租房.md
@@ -3,9 +3,11 @@
 ### **1. 临时过渡住所**
 
 * 酒店：酒店比较昂贵，一般只适用于极短期（一周内）
-* 民宿：价格相对合理，而且可以做饭。可以找适合多人住的民宿，然后在群里找同学一起拼
+* 民宿/青旅：价格相对合理，而且可以做饭。可以找适合多人住的民宿，然后在群里找同学一起拼
 
-> 有些民宿或青年酒店居住时长超过1个月会签租房合同（提前与店家确认），可以拿这个合同去人口登记办公室申报住址
+> 有些民宿或青旅居住时长超过1个月会签租房合同（提前与店家确认），可以拿这个合同去人口登记办公室申报住址
+>
+> 如确实找不到房，建议**最晚在八月中旬**预定好民宿/青旅，否则之后即便是民宿和青旅也一房难求
 
 * 学长学姐/朋友家
 * 群里的短租：自行甄别筛选
