--- a/10申请签证.md
+++ b/10申请签证.md
@@ -6,18 +6,21 @@ Bachelor与Master学生在收到录取通知书后，就可以开始准备申请
 
 #### **2. 申请材料**
 
-**请详细阅读学校给出的清单 ，清单可在下方链接里查看。请以学校官网信息作为申签指导**！以下仅为一般性总结及注意点：
+在“申请签证”这件可以一票决定你未来人生走向的大事上，学联强烈推荐**直接且仔细阅读官方信息来源**，官方信息来源有[移民局](https://www.zh.ch/de/migration-integration/einreise/einreise-ohne-erwerbstaetigkeit-fuer-drittstaatsangehoerige.html)，[ETH](https://ethz.ch/en/studies/international/after-admission/immigration/visa.html)，[UZH](https://www.uzh.ch/cmsssl/en/studies/application/entry/guidelines.html)，[使领馆](https://www.eda.admin.ch/countries/china/en/home/visa/entry-ch/more-90-days/documents-national.html)。以下仅为这四大官方信息来源的简要梳理，我们**推荐直接阅读相关原文获取信息**！
 
-* 申请表（National Type D Visa）
-* 护照（注意护照有效期，如有效期一年内，则建议先换护照）
-* 护照照片（背景+尺寸按使领馆要求）
-* 学校注册确认信
-* 简历（需注明语言水平）
-* 本科毕业证（如果毕业证不是英文或德文的，需要公证，两个学校要求有点不一样，请在链接里仔细查看，一般公证需要较长时间，请提前安排时间）
-* 动机信
-* 学习计划（study plan）
-* 毕业计划（future plan，**避免表达留瑞意向**）
-* 银行存款（请存入苏黎世州移民局[接受的银行](https://www.finma.ch/en/~/media/finma/dokumente/bewilligungstraeger/pdf/beh.pdf?la=de)中，2023年5月名单包含：建行、工行和中行。苏黎世州移民局没有要求存款冻结，但各使领馆有自己的存款冻结要求。每个使领馆的冻结要求不一样，而且每年都在变。因此，在换汇冻结前请先邮件咨询你递签领区的使领馆，并分享/关注新生群内相关消息）
+> 瑞士的信息公开做得很好，来到瑞士，当面对具有决定性的事情时，请学会自己检索搜集整理信息并作出决定
+
+^
+
+你的申请材料将经由使领馆转交给苏黎世州移民局，苏黎世州移民局将审核你的签证材料并决定是否发签。最终决定权在苏黎世州移民局手上，使领馆仅负责转交材料并通知贴签。
+
+> 苏黎世州移民局对于签证申请的相关政策法规可见（德语）
+>
+> <https://www.zh.ch/de/migration-integration/einreise/einreise-ohne-erwerbstaetigkeit-fuer-drittstaatsangehoerige.html>
+
+^
+
+请详细阅读学校给出的申签材料清单 ，清单可在下方链接里查看。**请以学校官网信息作为申签指导**！
 
 > **ETH要求的申请材料（注意本科生和硕士生不一样**）<https://ethz.ch/en/studies/international/after-admission/immigration/visa.html>
 >
@@ -29,23 +32,42 @@ Bachelor与Master学生在收到录取通知书后，就可以开始准备申请
 >
 > <https://www.uzh.ch/cmsssl/en/studies/application/entry/guidelines.html>
 >
-> 本页提供的信息仅供参考，不保证完全准确。这些信息所依据的法规自上次审查以来可能已经发生变化。有关具有法律约束力的信息，请查阅联邦移民局的网站或联系瑞士驻你所在国的大使馆。
->
-> ^
->
-> **移民局可接受银行清单**
->
-> <https://www.finma.ch/en/~/media/finma/dokumente/bewilligungstraeger/pdf/beh.pdf?la=de>
+> 本页提供的信息仅供参考，不保证完全准确。这些信息所依据的法规自上次审查以来可能已经发生变化。有关具有法律约束力的信息，请查阅苏黎世州移民局的网站或联系瑞士驻你所在国的大使馆。
 
 ^
 
-除满足上述移民局（和学校）的要求外，**请注意还要满足**[瑞士驻中国使领馆的材料要求](https://www.eda.admin.ch/countries/china/en/home/visa/entry-ch/more-90-days/documents-national.html)！具体请下载下方PDF查看：
+以下为仅为经验总结的**各材料需注意点**：
 
-**使领馆和移民局要求不完全相同**，**需要取两者的并集，把所有材料都交上去**！
+* 申请表（National Type D Visa）
+* 护照（注意护照有效期，如有效期一年内，则建议先换护照）
+* 护照照片（背景+尺寸按使领馆要求）
+* 学校注册确认信（ETH: Anmeldebestätigung / Confirmation of Registration）
+* 简历（需注明语言水平）
+* 本科毕业证（如果毕业证不是英语或德语的，需**公证成德语**。公证一般需要较长时间，请提前做好安排）
+* 动机信（motivation letter，简短）
+* 学习计划（study plan，简短）
+* 毕业计划（future plan，简短）
+* ~~毕业离境承诺书~~（高等院校（Hochschule）学生**不需要提交**书面的毕业离境承诺书！）
 
-![](.topwrite/assets/image_1682753598509.png =335)
+> 根据苏黎世州移民局《Weisung: Aus- und Weiterbildung aus Drittstaaten》 的2.4.3.2. Wiederausreiseverpflichtung 条款，来苏黎世州接受高等教育（Hochschule）的非申根区人员**不需要提交书面的毕业离境承诺书**，因为其毕业后有可能会留在瑞士工作。
+>
+> 详情可见：<https://www.zh.ch/de/migration-integration/einreise/einreise-ohne-erwerbstaetigkeit-fuer-drittstaatsangehoerige.html>
+
+* 银行存款（**请存入苏黎世州移民局**[接受的银行](https://www.finma.ch/en/~/media/finma/dokumente/bewilligungstraeger/pdf/beh.pdf?la=de)**中**，2023年5月名单包含：建行、工行和中行。苏黎世州移民局没有存款冻结要求，但各使领馆有自己的存款冻结要求。每个使领馆的冻结要求不一样，而且每年都在变。因此，在换汇冻结前请先邮件咨询你递签领区的使领馆，并分享/关注新生群内相关消息）
+
+> 苏黎世州移民局接受银行清单 <https://www.finma.ch/en/~/media/finma/dokumente/bewilligungstraeger/pdf/beh.pdf?la=de>
+
+^
+
+**除满足上述移民局的要求外**，**请注意还要满足**[瑞士驻中国使领馆的材料要求](https://www.eda.admin.ch/countries/china/en/home/visa/entry-ch/more-90-days/documents-national.html)。（即便使领馆只负责转交签证申请材料给苏黎世州移民局，但为避免递签时不必要的误会和麻烦，请同样遵守使领馆的材料要求！）
+
+具体请下载下方链接中的PDF查看：
 
 > **使领馆递签材料要求**<https://www.eda.admin.ch/countries/china/en/home/visa/entry-ch/more-90-days/documents-national.html>
+
+![](.topwrite/assets/image_1682753598509.png =406)
+
+**使领馆和移民局要求不完全一样**，**需要取两者要求的并集，把所有的材料都递交上去**！
 
 ^
 
