--- a/10申请签证.md
+++ b/10申请签证.md
@@ -8,7 +8,7 @@ Bachelor与Master学生在收到录取通知书后，就可以开始准备申请
 
 在“申请签证”这件可以一票决定你未来人生走向的大事上，学联强烈推荐**直接且仔细阅读官方信息来源**，官方信息来源有[移民局](https://www.zh.ch/de/migration-integration/einreise/einreise-ohne-erwerbstaetigkeit-fuer-drittstaatsangehoerige.html)，[ETH](https://ethz.ch/en/studies/international/after-admission/immigration/visa.html)，[UZH](https://www.uzh.ch/cmsssl/en/studies/application/entry/guidelines.html)，[使领馆](https://www.eda.admin.ch/countries/china/en/home/visa/entry-ch/more-90-days/documents-national.html)。以下仅为这四大官方信息来源的简要梳理，我们**推荐直接阅读相关原文获取信息**！
 
-> 瑞士的信息公开做得很好，来到瑞士，当面对具有决定性的事情时，请学会自己检索搜集整理信息并作出决定
+> 瑞士的信息公开做得很好，来到瑞士，请学会自己检索搜集整理信息并作出决定
 
 ^
 
