--- a/15新生材料c-o寄存.md
+++ b/15新生材料c-o寄存.md
@@ -2,7 +2,7 @@
 
 ^
 
-由于学校Kanzlei的窗口开放时间很短（每周只两天），新生材料包（学生卡、注册证明）可以提前找熟悉且靠谱的在苏黎世的学姐学长邮寄保存以便于落地后可以立刻领取，在学校的个人信息地址栏填写学姐学长的c/o地址即可。但请注意以下：
+由于学校Kanzlei的窗口开放时间很短（每周只两天），新生材料包（学生卡、学期注册证明、校园账户密码信件）可以提前找熟悉且靠谱的在苏黎世的学姐学长邮寄保存以便于落地后可以立刻领取，在学校的个人信息地址栏填写学姐学长的c/o地址即可。但请注意以下：
 
 ^
 
