--- a/15新生材料c-o寄存.md
+++ b/15新生材料c-o寄存.md
@@ -2,12 +2,12 @@
 
 ^
 
-由于学校Kanzlei的窗口开放时间很短（每周只两天），新生材料包（学生卡、学期注册证明、校园账户密码信件）可以提前找熟悉且靠谱的在苏黎世的学姐学长邮寄保存以便于落地后可以立刻领取，在学校的个人信息地址栏填写学姐学长的c/o地址即可。但请注意以下：
+由于学校Kanzlei的窗口开放时间很短（每周只两天），新生材料包（学生卡、学期注册证明、校园账户密码信件）可以提前找熟悉且靠谱的在苏黎世的学姐学长邮寄保存以便于落地后可以立刻领取，在eapply的个人信息地址栏填写学姐学长的c/o地址即可。但请注意以下：
 
 ^
 
 * 请找**靠谱**学姐学长，并且提前沟通好；
-* 当买好机票且确定落地日期后，应该及时和学姐学长说明情况，并**约定落地后领取材料的时间**。请确定学姐学长那时候在苏黎世，如果你落地后学姐学长刚好在旅游，那么你可能很长时间都领不到你的新生材料，导致居委会报到等一系列后续事项的连锁延后；
+* 当买好机票且确定落地日期后，应该及时和学姐学长说明情况，并**约定落地后领取材料的时间**。请确定学姐学长那时候在苏黎世，如果你落地后学姐学长刚好在旅游，那么你可能很长时间都领不到你的新生材料，导致住址申报等一系列后续事项的连锁延后；
 * 如果此时你想重新联系学校制作材料并邮寄到你的临时住址，那么过程耗费时间也是非常长的；
 
 ^
