--- a/27保险及豁免.md
+++ b/27保险及豁免.md
@@ -37,11 +37,11 @@
 
 **我可以在出发前申请瑞士健康保险吗**？
 
-不可以，你应该等到你到达瑞士并申请了居委会的报到证（Meldebestätigung）之后再申请。然后，你居住地的主管部门会通知你医疗保险的义务。
+不可以，你应该等到你到达瑞士并得到了人口登记办公室的住址申报确认函（Meldebestätigung）之后再申请。然后，你居住地的主管部门会通知你医疗保险的义务。
 
-如果你住在苏黎世市，当你在居委会登记居留证时，你会收到一封关于苏黎世强制医疗保险的信息函。请遵循信中的指示。请参考样本信:attachment[sample-letters.pdf]{src=".topwrite/assets/sample-letters.pdf" size="1.75 MB"}
+如果你住在苏黎世市，当你在人口登记办公室申报住址时，你会收到一封关于苏黎世强制医疗保险的信息函。请遵循信中的指示。请参考样本信:attachment[sample-letters.pdf]{src=".topwrite/assets/sample-letters.pdf" size="1.75 MB"}
 
-如果你不是住在苏黎世市，程序因市镇的不同而不同。当你在居委会报到并申请居留证的时候，你也应该询问那里关于医疗保险的通常程序。
+如果你不是住在苏黎世市，程序因市镇的不同而不同。当你在人口登记办公室申报住址并申请居留证的时候，你也应该询问那里关于医疗保险的通常程序。
 
 ^
 
