--- a/11行李准备.md
+++ b/11行李准备.md
@@ -74,10 +74,13 @@
 
 **各种煎锅、炒锅以及电水壶**：太重了，除了浪费你宝贵的行李额度之外没有任何用处，因为这些东西本地购买也不算太贵，再说德国的锅质量也好
 **大电饭煲**：同上，太占位置了，有需要的话建议去二手群或本地小米购买，或和室友协商共用。如实在想带，可自行权衡“所花费行李额”和“国内vs瑞士电饭煲差价”，并预估未来自己日常实际使用频率
-**肉类**：牛肉干什么的无所谓，腊肠之类的就别带了，带多了可能会导致被海关请进小黑屋喝茶
-**中草药**：同上，可能会被当成违禁品
+**肉类和乳制品**：来自非欧盟和非EFTA国家的动物源性食品（肉类、乳制品等）禁止入境瑞士
 **瑞士军刀**：拜托搞搞清楚你来的是瑞士诶
 
 ^
 
-**注：日常物品最好放在随身行李里，防止托运丢失的意外情况**
+> [info] **建议**：日常物品最好放在随身行李里，以便在托运行李万一丢失时依然可以维持短期的生活
+
+> [info] 苏黎世机场海关对**入境携带物品的规定**请见：<https://www.flughafen-zuerich.ch/en/passengers/fly/all-about-the-flight/customs>
+
+^
